CSS::Sass (3.4.1)

  * Update to latest LibSass release (3.4.3)
  * Remove undocumented `resolve_file` function
  * Bundle experimental LibSass plugins (alpha)
  * Improve command line utility for plugins
  * Fix tests due to wrong skip count (Perl < 5.12)
  * Fix AND/OR operations and enable test case

 -- Marcel Greter <perl-libsass@ocbnet.ch>  Wed, 11 Jan 2017 14:18:43 +0200

CSS::Sass (3.4.0)

  * Update to latest LibSass release (3.4.0)
  * Add source-map-file-urls option to cli
  * Change cli options to be case sensitive
  * Fix issue connected to EUMM bugfix
  * Update spec runner for nested options
  * Enable error spec tests again

 -- Marcel Greter <perl-libsass@ocbnet.ch>  Sat, 10 Dec 2016 17:23:09 +0200

CSS::Sass (3.3.6)

  * Fix issue with ExtUtils::MakeMaker 7.12+
  * Add gcc 4.4 compatibility for libsass

CSS::Sass (3.3.5)

  * Fix spec runner to pass on linux (unicode issue)
  * Fix broken unicode test comparing on some systems
  * Add missing test dependency in meta files (YAML::XS)
  * Update README for Module::Build to ExtUtils::MM switch

CSS::Sass (3.3.4)

  * Update to latest LibSass dev release (pre 3.3.7)
  * Fix build edge case with EUMM 7.16 (@genehack)
  * Remove duplicate "m" arg from psass (@dracos)

CSS::Sass (3.3.3)

  * Update to latest LibSass release (3.3.6)

CSS::Sass (3.3.2)

  * Update to latest LibSass release (3.3.5)

CSS::Sass (3.3.1)

  * Update to latest LibSass release (3.3.4)

CSS::Sass (3.3.0)

  * Update to latest LibSass release (3.3.3)
  * Update spec test runner for error specs
  * Use LibSass functions for compare operations
  * Switch `Module::Build` with `ExtUtils::MakeMaker`
  * Improve unicode handling with command line utility

CSS::Sass (3.3.0-rc1)

  * Update to latest libsass release (3.3.0-rc1)
  * Implement native operations for sass values
  * Add missing `source-map-root` context option
  * Move build to more portable ExtUtils::MakeMaker

CSS::Sass (3.2.2)

  * Update to latest libsass release (3.2.4)