@@ -68,5 +68,5 @@
          "url" : "https://github.com/sass/perl-libsass"
       }
    },
-   "version" : "v3.4.1"
+   "version" : "v3.4.2"
 }
