@@ -24,7 +24,7 @@ use warnings;
 
 ################################################################################
 package CSS::Sass::Plugins;
-our $VERSION = "3.4.1";
+our $VERSION = "3.4.2";
 ################################################################################
 # collect plugins
 our %plugins;
