@@ -1,3 +1,12 @@
+CSS::Sass (3.4.2)
+
+  * Fix build issue with plugins on OSX (#28)
+  * Fix plugin loader when plugins are disabled
+  * Update all plugins to their latest versions
+  * Improve spec runner to cover all warnings and errors
+
+ -- Marcel Greter <perl-libsass@ocbnet.ch>  Wed, 15 Feb 2017 01:02:58 +0200
+
 CSS::Sass (3.4.1)
 
   * Update to latest LibSass release (3.4.3)
